NEW UPDATE - V {ModVersion}
Swarm summons now display their drops in their tooltip