@@ -270,6 +270,11 @@ Mods: {
 					Tooltip: Скорость предмета измеряется во времени использования, т.е. чем больше число, тем медленнее скорость.
 				}
 
+				AnimatedRecipeGroups: {
+					Label: "[i:9] Анимированные группы в рецептах"
+					Tooltip: Определяет, будут ли группы предметов в рецептах показывать спрайты включённых в них предметов или нет.
+				}
+
 				HideUnlimitedBuffs: {
 					Label: "[i:292] Прятать бесконечные баффы из списка"
 					Tooltip: ""
